# neptune-pde-solver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml
backend/include/Dialect/: CMakeLists.txt
backend/include/Dialect/nptExp/: CMakeLists.txt  nptExpDialect.h  nptExpDialect.td  nptExpOps.h  nptExpOps.td
backend/include/Dialect/nptImpl/: CMakeLists.txt  nptImplDialect.h
cmake/: petsc_smoke_test.c
cmake/Modules/: FindPETSc.cmake
docs/: dialects.md
include/: CMakeLists.txt
include/Dialect/: CMakeLists.txt
include/Dialect/NeptuneIR/: CMakeLists.txt  NeptuneIRAttrs.h  NeptuneIRAttrs.td  NeptuneIRDialect.h  NeptuneIRDialect.td  NeptuneIROps.h  NeptuneIROps.td  NeptuneIRTypes.td
include/Dialect/NptExp/: CMakeLists.txt
include/Dialect/NptImpl/: CMakeLists.txt  NptImplDialect.h  NptImplDialect.td  NptImplOps.h  NptImplOps.td
include/Dialect/NptNSEq/: CMakeLists.txt
include/Dialect/NptSWEq/: CMakeLists.txt
include/Frontend/: CMakeLists.txt  NeptuneCompiler.h  NeptuneModuleBuilder.h
include/Passes/: CMakeLists.txt  LowerEvaluateToLoop.h  NeptuneIRPasses.h  NeptuneIRPasses.td  NeptuneIRPassesPipeline.h
include/Runtime/: CMakeLists.txt
include/Runtime/PETSc/: NeptunePETScRuntime.h
include/Utils/: FuncNameHelper.h
lib/: CMakeLists.txt
lib/Compiler/: CMakeLists.txt  NeptuneCompiler.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/NeptuneIR/: CMakeLists.txt  NeptuneIRDialect.cpp  NeptuneIRVerifier.cpp
lib/Dialect/NptImpl/: CMakeLists.txt  NptImplDialect.cpp  NptImplOps.cpp
lib/Frontend/: CMakeLists.txt  NeptuneModuleBuilder.cpp  PybindBindings.cpp
lib/Passes/: CMakeLists.txt  DataflowLowering.cpp  HighLevelConvertion.cpp  LowerEvaluateToLoop.cpp  LowerEvaluateToRealCompute.cpp  NeptuneIRStencilToSCF.cpp  NormalizeNeptuneIRStorage.cpp  RuntimeLowering.cpp  StructureLowering.cpp  SymbolicSimplify.cpp  VerifyAndAnnotate.cpp
lib/Pipeline/: CMakeLists.txt  NeptuneIRPassesPipeline.cpp
lib/Runtime/: CMakeLists.txt
lib/Runtime/PETSc/: CMakeLists.txt  NeptunePETScRuntime.cpp
neptune_pde_describer/: CMakeLists.txt  pyproject.toml
neptune_pde_describer/src/nptdsl/: __init__.py  discretization.py  equation.py  field.py  grid.py  pde_ir.py  stencil_ir.py  timestepping.py
neptune_pde_describer/src/nptdsl/backend/: __init__.py  base.py  mlir_backend.py  python_backend.py
neptune_pde_describer/tests/: simple_test.py  test_head1d.py
python_frontend/: CMakeLists.txt
python_frontend/bindings/: NeptuneModule.cpp
python_frontend/neptune/: __init__.py  backend.py  core.py  dsl.py  expr.py  jit.py
scripts/: build.sh  clean.sh
src/: CMakeLists.txt  my-mlir-opt.cpp  neptune.cpp  neptuneOpt.cpp
src/Dialect/: CMakeLists.txt  MyDialect.cpp  MyDialect.td  MyOps.td
src/Pass/: CMakeLists.txt
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/MyDialect/: CMakeLists.txt  basic.test
test/mlir_test/: highLevel.mlir  polyMeshOp.mlir
test/mlir_tests/: assemble-matrix-invalid-type.mlir  solve-linear-invalid-system.mlir  solver-pipeline-to-llvm.mlir
test/mlir_tests/conversion_tests/: apply-1d-jacobi.mlir  apply-2d-5pt.mlir  symbolicSimplify.mlir
test/mlir_tests/op_tests/: attrs-and-types.mlir  highLevel.mlir  wrap-load-store.mlir
test/python_tests/: test_jit.py  test_swe_implicit.py  test_user.py
test/regression_tests/mlir_tests/: 1dheat.mlir  apply-time-space-heat.mlir
test/smoke_tests/: smoke.mlir  smoke.sh  smoke_apply.mlir  smoke_apply.sh  smoke_assemble_matrix.sh  smoke_time_advance.mlir  smoke_time_advance.sh  smoke_time_advance_bs.mlir  smoke_time_advance_bs.sh  smoke_time_advance_nonlinear.mlir  smoke_time_advance_nonlinear.sh
