[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neptune_dsl"
version = "1.0.0"
description = "Neptune PDE toy DSL (WIP)"
authors = [{ name = "leviathan", email = "670916484@qq.com" }]
requires-python = ">=3.9"
dependencies = ["numpy", "sympy", "pybind11"]

[tool.setuptools]
package-dir = {"" = "python_frontend"}

[tool.setuptools.packages.find]
where = ["python_frontend"]