[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nptdsl"
version = "0.0.1"
description = "Neptune PDE toy DSL (WIP)"
authors = [{ name = "your-name", email = "you@example.com" }]
requires-python = ">=3.9"
dependencies = ["numpy", "sympy"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]